--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,2 +1,12 @@
 // Font
 @import url(https://fonts.googleapis.com/css?family=Raleway:100,300);
+
+body {
+	div {
+		display: inline;
+
+		p {
+			color: red;
+		}
+	}
+}
