Updated SCSS & added fontawesome

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,2 +1,11 @@
-// Font
-@import url(https://fonts.googleapis.com/css?family=Raleway:100,300);
+// ------- Font ------- //
+
+// ------- Imports ------- //
+@import 'vars';
+@import 'reset';
+@import 'mixins';
+@import '../../node_modules/font-awesome/scss/font-awesome';
+
+// ------- Styling ------- //
+
+// Global
